# encdec

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
src/: cli.rs  error.rs  lib.rs  main.rs  streaming.rs  types.rs  util.rs
src/crypto/: aes.rs  des.rs  rsa.rs
tests/: cli_integration_tests.rs  crypto_tests.rs  performance_tests.rs
